--- a/python/src/stackdump/templates/site_results.html
+++ b/python/src/stackdump/templates/site_results.html
@@ -8,6 +8,7 @@
             <form id="search" method="get" action="{{ SETTINGS.APP_URL_ROOT }}{{ site.key }}/search">
                 <input type="text" class="xlarge" name="q" value="{{ query }}" />
                 <input type="hidden" name="s" value="{{ sort_by }}" />
+                <input type="hidden" name="t" value="{{ tag }}" />
                 <input type="submit" class="btn primary" value="Search{% if site %} {{ site.name }}{% endif %}" />
             </form>
             
@@ -28,7 +29,7 @@
                     <span class="stat-value">{{ total_hits }}</span>
                 </p>
                 <p>
-                    questions matched your query <em>"{{ query }}"</em>.
+                    questions matched your query <em>{% if query %}"{{ query }}" {% endif %} {% if query and tag %} & {% endif %} {% if tag %}"<b>tag</b>: {{ tag }}" {% endif %}</em>.
                 </p>
             </div>
             
@@ -39,11 +40,11 @@
                 <ul class="site-list">
                     {% for s in sites %}
                     {# don't show the current site #}
-                    {% if s.key != site.key %}
+                    {% if s.key != site.key and (s.key in site_counts) %}
                     <li>
                         <img src="{{ SETTINGS.APP_URL_ROOT }}media/logos/{{ s.key }}.png" alt="{{ s.name }} logo" />
                         <h6>
-                            <a href="{{ SETTINGS.APP_URL_ROOT }}{{ s.key }}/search?q={{ query }}&amp;s={{ sort_by }}">{{ s.name }}</a>
+                            <a href="{{ SETTINGS.APP_URL_ROOT }}{{ s.key }}/search?q={{ query }}&amp;s={{ sort_by }}{% if tag %}&amp;t={{ tag }}{% endif %}">{{ s.name }}</a> <small>({{ site_counts[s.key] }})</small>
                             <small class="tagline">{{ s.dump_date }}</small>
                         </h6>
                     </li>
